--- a/metadata.yaml
+++ b/metadata.yaml
@@ -26,5 +26,6 @@ subjects:
 - !lcc 'PZ'
 - !lcsh 'Domestic fiction'
 - !lcsh 'Uncles -- Juvenile fiction'
+- GITenberg
 title: Six Little Bunkers at Uncle Fred's
 url: http://www.gutenberg.org/ebooks/20326
